# learn-opengl

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  vcpkg.json  windb.sh
include/glad/: glad.h
lib/: glad.c
res/model/: blaster_origin.glb  grass.glb  marathon.glb  monster_in_treasure.glb  portal.glb  practice.glb  scroll_of_smiting.glb
res/shader/: 1.colors.frag  1.colors.fs  1.colors.vert  1.colors.vs  1.light_cube.vert  gouraud.frag  gouraud.vert  material.frag  material.vert  model_loading.vert  outline.vert  portal.frag
src/: main.cpp  main.cppbak  mainbak.cppbak
src/actor/: portal.cpp  portal.h
src/graphics/: renderer.h  skybox.h
src/input/: camera.h
src/model/: mesh.h  model.h
